chore: distinct tsconfigs between Browser and Node.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "nodemon --exec tsx src/server.ts --watch src --ext ts",
+    "dev": "nodemon --exec \"tsx --tsconfig tsconfig.server.json src/server.ts\" --watch src --ext ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,7 +17,6 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.9",
     "nodemon": "^3.1.11",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
